--- a/DarkHistory/get_transfer_func_table.ipynb
+++ b/DarkHistory/get_transfer_func_table.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload"
@@ -13,15 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload\n",
     "import numpy as np\n",
-    "import get_raw_tf\n",
+    "import TransferFunction.get_raw_tf as get_raw_tf\n",
     "import pickle\n",
     "import utilities as utils\n",
     "\n",
@@ -30,17 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:02<00:00, 196.02it/s]\n",
-      "100%|█████████▉| 499/500 [05:38<00:00,  1.46it/s]"
+      "100%|██████████| 500/500 [00:02<00:00, 203.20it/s]\n",
+      "100%|█████████▉| 499/500 [04:33<00:00,  1.79it/s]"
      ]
     }
    ],
@@ -52,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -75,10 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -593,7 +585,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,9 +609,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:python3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -631,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
